# myAIscene

./: .gitignore  ARCHITECTURE.md  CONSTITUTION.md  README.md  SPEC.md
backend/: pyproject.toml
backend/myAIscene/: __init__.py  api.py  cli.py  events.py  local.py  luts.py  pipeline.py  renderers.py  spec.py  verifiers.py  writer.py
backend/tests/: test_local.py  test_phase3.py  test_phase4.py  test_phase5.py  test_pipeline.py  test_spec.py  test_verifiers.py  test_writer.py
docs/: index.html
frontend/: index.html
specs/: calling_shotgun.json  not_it_protocol.json  shotgun_decree.json
